# slimmy

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
guest-wasm/: Cargo.toml
guest-wasm/src/: lib.rs
host-demo/: Cargo.toml
host-demo/src/: main.rs
packer/: Cargo.toml
packer/src/: main.rs
patches/esp-idf-sys/: .cargo_vcs_info.json  Cargo.toml
patches/esp-idf-sys/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  manifest.rs  storage.rs
runtime/src/engines/: mod.rs  wamr.rs  wasm3.rs  wasmtime_lite.rs
