[package]
name = "host-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[features]
default = []
wasm3 = ["runtime/engine-wasm3"]
wasmtime-lite = ["runtime/engine-wasmtime-lite"]
verify-ed25519 = ["runtime/verify-ed25519"]

[dependencies]
runtime = { path = "../runtime" }
clap = { version = "4.5.17", features = ["derive"] }
hex = "0.4"
