[package]
name = "packer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[features]
default = ["ed25519"]
ed25519 = ["ed25519-dalek"]

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4"
runtime = { path = "../runtime", features = ["verify-ed25519"] }
ed25519-dalek = { version = "2.2.0", default-features = false, optional = true, features = ["alloc"] }
