[package]
name = "runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[features]
default = ["std"]
std = ["alloc"]
alloc = []
engine-wasm3 = ["alloc", "wasm3"]
verify-ed25519 = ["alloc", "ed25519-dalek"]

[dependencies]
wasm3 = { version = "0.3.1", default-features = false, optional = true, features = ["build-bindgen"] }
ed25519-dalek = { version = "2.2.0", default-features = false, optional = true, features = ["alloc"] }
